k8s/fastapi-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-back-deployment
  labels:
    app: fastapi-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-back
  template:
    metadata:
      labels:
        app: fastapi-back
    spec:
      containers:
        - name: fastapi-back
          image: megaredhand/fastapi-back:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-back-service
spec:
  selector:
    app: fastapi-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
