k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    dev.okteto.com/generate-host: backend-ingress
spec:
  rules:
    - host: backend-pr-2-megaredhand.cloud.okteto.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-back-service
                port:
                  number: 80
