k8s/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: hello-world
  metadata:
    name: app-pod
  template:
    spec:
      containers:
        - name: app
          image: local/app

---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: ClusterIP
  ports:
    - name: "hello-world"
      port: 8080
  selector:
    app: hello-world

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    dev.okteto.com/generate-host: hello-world
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: hello-world
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
